syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.itau.pix";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.itau.pix;

service KeyManagerGrpcService {
  rpc adicionar (KeyManagerGrpcRequest) returns (KeyManagerGrpcResponse) {}
}

service KeyPixRemoveService{
  rpc removekey (KeyPixRemoveRequest) returns (KeyPixRemoveResponse) {}
}

message KeyManagerGrpcRequest {
  string clienteId = 1;
  TipoDeChave tipoChave = 2;
  string valorChave = 3;
  TipoDaConta tipoConta = 4;

}

message KeyManagerGrpcResponse {
  string id = 1;
  string clienteId = 2;
}

enum TipoDeChave {
  TIPO_CHAVE_DESCONHECIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDaConta{
  TIPO_CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}

message KeyPixRemoveRequest{
  string pixId = 1;
  string clienteId = 2;
}

message KeyPixRemoveResponse{
  string message = 1;
}